Fix wrap

--- a/wp-content/themes/gazprom-cps/layout/style/partials/_app-header.scss
+++ b/wp-content/themes/gazprom-cps/layout/style/partials/_app-header.scss
@@ -42,6 +42,7 @@
     color: var(--color-primary);
     text-decoration: none;
     font-family: 'HeliosC';
+    white-space: nowrap;
 
     @media (max-width: 949px) {
       font-size: 22px;
